@@ -1,4 +1,8 @@
-﻿drkns 25.12.2015 21:54:47 +0200
+﻿w17 27.12.2015 11:08:48 +0300 - build 4492
+
+1. M#3142: Сломана вставка текста из борландовской IDE
+
+drkns 25.12.2015 21:54:47 +0200
 
 1. 0003145: New German translation
 
